# recipe-emailer

./: .deepsource.toml  .gitignore  CHANGELOG.md  CLAUDE.md  DELIVERY_SUMMARY.md  PR_PACKAGE_INDEX.md  PULL_REQUEST.md  README.md  TODO  VALIDATION_REPORT.md  backfill_seasonality.py  ci.yml  config.py  cook.py  cook.sh  cook10.py  cook11.py  cook2json.py  cook2pkl.py  cook5.py  cook8.py  cook9.py  css.py  csv.csv  data.pkl  debug_utils.py  debugging.py  email_sender.py  failed_recipes.json  file_utils.py  head.html  helper.py  html_generator.py  index.html  lists.py  mailer.py  main.py  master_data.pkl  master_data.pkl.bak  neat_html_prettify.py  (+28 more)
.github/: pull_request_template.md
.github/workflows/: ci.yml
tests/: test_backfill_seasonality_baseline.py  test_debug_html_baseline.py  test_email_sender.py  test_file_utils_baseline.py  test_main_email_baseline.py  test_main_health_baseline.py  test_main_seasonal_baseline.py  test_recipe_processor_baseline.py  test_recipe_selector_baseline.py  test_seasonal_label.py  test_seasonal_model.py  test_seasonal_model_config.py  test_seasonal_selection_baseline.py  test_seasonal_tagging_baseline.py  test_site_health_baseline.py  test_train_seasonal_model.py  test_web_scraper_baseline.py  test_website_publisher.py  test_websites.py
