[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recipe-emailer"
version = "16.0.0"
description = "Automated recipe scraper and emailer"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "wassupluke", email = "wassupluke@example.com"}
]
keywords = ["recipe", "scraper", "email", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "beautifulsoup4>=4.12.3",
    "certifi>=2024.7.4",
    "charset-normalizer>=3.3.2",
    "extruct>=0.17.0",
    "html-text>=0.5.2",
    "html5lib>=1.1",
    "idna>=3.7",
    "isodate>=0.6.1",
    "jstyleson>=0.0.2",
    "lxml>=5.1.0",
    "lxml_html_clean>=0.2.2",
    "mf2py>=2.0.1",
    "pyparsing>=3.1.2",
    "pyRdfa3>=3.6.2",
    "python-dotenv>=1.0.1",
    "rdflib>=7.0.0",
    "recipe_scrapers>=15.1.0",
    "requests>=2.32.0",
    "six>=1.16.0",
    "soupsieve>=2.5",
    "toml>=0.10.2",
    "tqdm>=4.66.3",
    "urllib3>=2.2.2",
    "w3lib>=2.1.2",
    "webencodings>=0.5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.12.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "types-requests>=2.31.0",
    "types-tqdm>=4.66.0",
    "coverage-badge>=1.1.0",
    "setuptools>=65.0.0",
]

[project.scripts]
recipe-emailer = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["file_utils", "websites", "main", "recipe_selector", "recipe_processor", "config", "email_sender", "html_generator", "debug_utils", "web_scraper"]
exclude = ["test_file_utils", "tests*"]

# Black configuration
[tool.black]
line-length = 88
target-version = ['py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | build
  | dist
)/
'''

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise without from in except block
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports
"tests/*" = ["ARG", "SIM"]  # test files can be less strict

[tool.ruff.lint.isort]
known-first-party = ["config", "file_utils", "web_scraper", "recipe_processor", "recipe_selector", "html_generator", "email_sender", "debug_utils"]

# Mypy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "recipe_scrapers.*",
    "tqdm.*",
    "bs4.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
# To run with coverage: pytest --cov=. --cov-report=term-missing --cov-report=html
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
    "setup.py",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "@overload",
]

[tool.coverage.html]
directory = "htmlcov"
